<resources>
    <string name="app_name">Yu-Gi-Oh! Monster Battle</string>
    <string name="menu_home_title">Página Principal</string>
    <string name="menu_search_card_title">Buscar Cartas</string>
    <string name="menu_favourites_title">Ver Favoritos</string>
    <string name="menu_battle_title">Luchar</string>
    <string name="textView_Logo_text">Monster Battle</string>
    <string name="imageView_Logo_contentDescription">Logo de Yu-Gi-Oh</string>
    <string name="textView_AddFavourite_Title_text">¿Deseas agregar esta carta a Favoritos?</string>
    <string name="textView_AddFavourite_Attack_text">Ataque: %1$s</string>
    <string name="textView_AddFavourite_Defense_text">Defensa: %1$s</string>
    <string name="cancel_text">Cancelar</string>
    <string name="add_text">Agregar</string>
    <string name="remove_text">Quitar</string>
    <string name="textView_RemoveFavourite_Title_text">¿Desea quitar esta carta de Favoritos?</string>
    <string name="button_Remove_All_Favourites_text">Vaciar Favoritos</string>
    <string name="confirm_empty_favourites_text">¿De verdad desea vaciar la lista de Favoritos?</string>
    <string name="empty_text">Vaciar</string>
    <string name="textView_Deck_Title_text">Crear Mazo</string>
    <string name="textView_NotEnoughFavourites_text">Necesitas un mínimo de 5 Cartas en la Lista de Favoritos para poder crear un Mazo</string>
    <string name="textView_Favourites_text">Favoritos</string>
    <string name="textView_Deck_text">Mazo</string>
    <string name="button_Add_Deck_text">Crear Mazo</string>
    <string name="battle_text">Batalla</string>
    <string name="start_turn_text">Comenzar Turno</string>
</resources>