<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:enabled="true"
        android:icon="@drawable/icon_home"
        android:title="@string/menu_home_title"/>

    <item
        android:id="@+id/menu_search_card"
        android:enabled="true"
        android:icon="@drawable/icon_search"
        android:title="@string/menu_search_card_title"/>

    <item
        android:id="@+id/menu_favourites"
        android:enabled="true"
        android:icon="@drawable/icon_favourite"
        android:title="@string/menu_favourites_title"/>

    <item
        android:id="@+id/menu_battle"
        android:enabled="true"
        android:icon="@drawable/icon_battle"
        android:title="@string/menu_battle_title"/>

</menu>