<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.AddFavouriteFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_gravity="center"
        android:layout_width="260dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView_AddFavourite_Title"
            android:text="@string/textView_AddFavourite_Title_text"
            android:textColor="@color/colorMenuItemChecked"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/imageView_AddFavourite_Image"
            android:src="@drawable/icon_battle"
            android:adjustViewBounds="true"
            android:paddingTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_constraintTop_toBottomOf="@id/textView_AddFavourite_Title"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView_AddFavourite_Name"
            android:text="@string/app_name"
            android:paddingTop="8dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/imageView_AddFavourite_Image"/>

        <TextView
            android:id="@+id/textView_AddFavourite_Attack"
            android:text="@string/textView_AddFavourite_Attack_text"
            android:paddingTop="8dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textView_AddFavourite_Name"/>

        <TextView
            android:id="@+id/textView_AddFavourite_Defense"
            android:text="@string/textView_AddFavourite_Defense_text"
            android:paddingTop="8dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textView_AddFavourite_Attack"/>

        <Button
            android:id="@+id/button_Cancel"
            android:text="@string/cancel_text"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="4dp"
            android:layout_width="122dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textView_AddFavourite_Defense"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <Button
            android:id="@+id/button_Add"
            android:text="@string/add_text"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="4dp"
            android:layout_width="122dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textView_AddFavourite_Defense"
            app:layout_constraintLeft_toRightOf="@id/button_Cancel"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>